[package]
name = "backend"
version = "0.1.0"
authors = ["Curstantine <curstantine@gmail.com>"]
default-run = "backend"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1" }

[dependencies]
anyhow = "1.0.79"
deezer = { path = "../packages/deezer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.tauri]
version = "1.5.4"
features = [
	"fs-read-dir",
	"fs-read-file",
	"fs-remove-file",
	"fs-write-file",
	"protocol-asset",
	"window-close",
	"window-create",
	"window-hide",
	"window-maximize",
	"window-minimize",
	"window-set-closable",
	"window-set-cursor-grab",
	"window-set-cursor-icon",
	"window-show",
	"window-start-dragging",
	"window-unmaximize",
	"window-unminimize",
]

[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
window-shadows = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
